delete unneeded cells from pos notebook

--- a/RNN/glove.ipynb
+++ b/RNN/glove.ipynb
@@ -220,7 +220,9 @@
    },
    "source": [
     "## Word Embedding\n",
-    "So now we need a good representation of words that could match each word to a number or group of numbers so that they keep some of the semantic properties and similarities"
+    "So now we need a good representation of words that could match each word to a number or group of numbers so that they keep some of the semantic properties and similarities\n",
+    ">GloVe is an unsupervised learning algorithm for obtaining vector representations for words. Training is performed on aggregated global word-word co-occurrence statistics from a corpus, and the resulting representations showcase interesting linear substructures of the word vector space. \n",
+    "\n"
    ]
   },
   {
