applying regularization to reduce overfitting

--- a/RNN/pos.ipynb
+++ b/RNN/pos.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -88,7 +88,7 @@
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Embedding, Flatten, Dense, LSTM, Bidirectional\n",
+    "from tensorflow.keras.layers import Embedding, Flatten, Dense, LSTM, Bidirectional,Conv1D,MaxPooling1D,GlobalMaxPooling1D\n",
     "# from tensorflow.keras.engine.input_layer import Input\n",
     "\n",
     "import numpy as np\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -129,7 +129,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65d84330a2db4518bd67565bff0960c8",
+       "model_id": "0923c57769824c799ed7d97420eb3a84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -327,60 +327,25 @@
      "text": [
       "Train on 453 samples, validate on 114 samples\n",
       "Epoch 1/20\n",
-      "453/453 [==============================] - 123s 271ms/step - loss: 1.0201 - acc: 0.4260 - val_loss: 0.9821 - val_acc: 0.4561\n",
+      "453/453 [==============================] - 128s 282ms/step - loss: 0.9923 - acc: 0.4680 - val_loss: 1.0232 - val_acc: 0.4649\n",
       "Epoch 2/20\n",
-      "453/453 [==============================] - 137s 303ms/step - loss: 0.9711 - acc: 0.4570 - val_loss: 0.9677 - val_acc: 0.4474\n",
+      "453/453 [==============================] - 120s 264ms/step - loss: 0.9409 - acc: 0.5055 - val_loss: 1.0151 - val_acc: 0.4386\n",
       "Epoch 3/20\n",
-      "453/453 [==============================] - 129s 284ms/step - loss: 0.9402 - acc: 0.4967 - val_loss: 0.9695 - val_acc: 0.4737\n",
+      "453/453 [==============================] - 124s 274ms/step - loss: 0.9608 - acc: 0.5055 - val_loss: 0.9633 - val_acc: 0.4298\n",
       "Epoch 4/20\n",
-      "453/453 [==============================] - 124s 274ms/step - loss: 0.9332 - acc: 0.4945 - val_loss: 0.9711 - val_acc: 0.4474\n",
+      "453/453 [==============================] - 130s 287ms/step - loss: 0.9387 - acc: 0.5077 - val_loss: 0.9530 - val_acc: 0.4649\n",
       "Epoch 5/20\n",
-      "453/453 [==============================] - 122s 270ms/step - loss: 0.9357 - acc: 0.4547 - val_loss: 0.9816 - val_acc: 0.4737\n",
+      "453/453 [==============================] - 133s 294ms/step - loss: 0.9341 - acc: 0.5121 - val_loss: 0.9455 - val_acc: 0.4649\n",
       "Epoch 6/20\n",
-      "453/453 [==============================] - 137s 302ms/step - loss: 0.9300 - acc: 0.5011 - val_loss: 0.9792 - val_acc: 0.4825\n",
+      "453/453 [==============================] - 131s 289ms/step - loss: 1.1629 - acc: 0.4901 - val_loss: 1.2432 - val_acc: 0.3509\n",
       "Epoch 7/20\n",
-      "453/453 [==============================] - 124s 274ms/step - loss: 0.9385 - acc: 0.5166 - val_loss: 0.9773 - val_acc: 0.5000\n",
+      "453/453 [==============================] - 173s 382ms/step - loss: 1.1170 - acc: 0.3488 - val_loss: 1.0747 - val_acc: 0.3860\n",
       "Epoch 8/20\n",
-      "453/453 [==============================] - 128s 283ms/step - loss: 1.0595 - acc: 0.4768 - val_loss: 0.9620 - val_acc: 0.5088\n",
+      "453/453 [==============================] - 152s 335ms/step - loss: 1.0346 - acc: 0.4923 - val_loss: 1.0191 - val_acc: 0.4474\n",
       "Epoch 9/20\n",
-      "453/453 [==============================] - 144s 318ms/step - loss: 0.9347 - acc: 0.5143 - val_loss: 0.9590 - val_acc: 0.4649\n",
+      "453/453 [==============================] - 145s 319ms/step - loss: 0.9988 - acc: 0.4790 - val_loss: 0.9847 - val_acc: 0.4123\n",
       "Epoch 10/20\n",
-      "453/453 [==============================] - 127s 280ms/step - loss: 0.9132 - acc: 0.4945 - val_loss: 0.9560 - val_acc: 0.5175\n",
-      "Epoch 11/20\n",
-      "453/453 [==============================] - 131s 289ms/step - loss: 0.9665 - acc: 0.5232 - val_loss: 0.8943 - val_acc: 0.5702\n",
-      "Epoch 12/20\n",
-      "453/453 [==============================] - 135s 299ms/step - loss: 1.0136 - acc: 0.5519 - val_loss: 0.8920 - val_acc: 0.6053\n",
-      "Epoch 13/20\n",
-      "453/453 [==============================] - 124s 274ms/step - loss: 0.9473 - acc: 0.5519 - val_loss: 0.8959 - val_acc: 0.5526\n",
-      "Epoch 14/20\n",
-      "453/453 [==============================] - 157s 347ms/step - loss: 0.8727 - acc: 0.6181 - val_loss: 0.8100 - val_acc: 0.6316\n",
-      "Epoch 15/20\n",
-      "453/453 [==============================] - 129s 286ms/step - loss: 0.8288 - acc: 0.6203 - val_loss: 0.7875 - val_acc: 0.6316\n",
-      "Epoch 16/20\n",
-      "453/453 [==============================] - 125s 276ms/step - loss: 0.8276 - acc: 0.6071 - val_loss: 0.7894 - val_acc: 0.6228\n",
-      "Epoch 17/20\n",
-      "453/453 [==============================] - 145s 320ms/step - loss: 0.8200 - acc: 0.6093 - val_loss: 0.7821 - val_acc: 0.6140\n",
-      "Epoch 18/20\n",
-      "453/453 [==============================] - 131s 289ms/step - loss: 0.8072 - acc: 0.6225 - val_loss: 0.7675 - val_acc: 0.6930\n",
-      "Epoch 19/20\n",
-      "453/453 [==============================] - 138s 304ms/step - loss: 0.8260 - acc: 0.5938 - val_loss: 0.7996 - val_acc: 0.6228\n",
-      "Epoch 20/20\n",
-      "453/453 [==============================] - 144s 318ms/step - loss: 0.8152 - acc: 0.6071 - val_loss: 0.7812 - val_acc: 0.6491\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "bidirectional (Bidirectional multiple                  81600     \n",
-      "_________________________________________________________________\n",
-      "bidirectional_1 (Bidirection multiple                  240800    \n",
-      "_________________________________________________________________\n",
-      "bidirectional_2 (Bidirection multiple                  240800    \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                multiple                  603       \n",
-      "=================================================================\n",
-      "Total params: 563,803\n",
-      "Trainable params: 563,803\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
+      "224/453 [=============>................] - ETA: 1:03 - loss: 0.9720 - acc: 0.5357"
      ]
     }
    ],
