--- a/CNN/pos.ipynb
+++ b/CNN/pos.ipynb
@@ -1696,32 +1696,589 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "567/567 [==============================] - 2s 3ms/step\n"
+      "[1.] 1 0\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 0 1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[-0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 1 -1\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 0 1\n",
+      "[0.] 1 -1\n",
+      "[0.] 2 -2\n",
+      "[1.] 0 1\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 2 -2\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 2 -2\n",
+      "[1.] 0 1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 1 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 0 1\n",
+      "[1.] 0 1\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 0 1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 0 1\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 2 -2\n",
+      "[1.] 2 -1\n",
+      "[1.] 0 1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 2 -2\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[-0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[2.] 1 1\n",
+      "[0.] 2 -2\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 2 -2\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[2.] 1 1\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 1 -1\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 0 1\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[-0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[2.] 1 1\n",
+      "[1.] 2 -1\n",
+      "[0.] 1 -1\n",
+      "[2.] 2 0\n",
+      "[0.] 1 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 0 1\n",
+      "[1.] 1 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 1 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[-0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[1.] 0 1\n",
+      "[1.] 1 0\n",
+      "[0.] 0 0\n",
+      "[2.] 2 0\n",
+      "[1.] 2 -1\n",
+      "[2.] 2 0\n",
+      "[2.] 2 0\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[0.] 0 0\n",
+      "[1.] 2 -1\n",
+      "[1.] 1 0\n",
+      "[1.] 2 -1\n",
+      "[0.] 0 0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[0.6246613578401125, 0.6913580252169722]"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import tensorflow as tf\n",
     "model = tf.keras.models.load_model('model-182-0.613687-0.736842.h5', custom_objects={'soft_acc': soft_acc})\n",
-    "# print(np.round(model.predict(data)))\n",
-    "model.evaluate(data, tags)"
+    "pred = np.round(model.predict(data), 0)\n",
+    "for i in range(567):\n",
+    "    print(pred[i], tags[i], abs(int(round(pred[i][0]-tags[i], 0))))"
    ]
   },
   {
