saving and loading tokenizer

--- a/CNN/pos.ipynb
+++ b/CNN/pos.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -131,14 +131,8 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45676bc5718342c7aad95f308d4dec2e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(IntSlider(value=94, description='i', max=188), IntSlider(value=500, description='words',…"
-      ]
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<table>\n<thead>\n<tr><th>Reading Level  </th><th>Example                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         </th></tr>\n</thead>\n<tbody>\n<tr><td>Advanced       </td><td>A British court has decided that three old Kenyans, who were put in prison and tortured during the fighting in Kenya in the 1950s, can sue the British government . There are thousands of other people who were put in prison and say they were treated badly during the final days of the British Empire, and now they may also try to sue . British government lawyers said that too much time had passed since the seven-year fight in the 1950s, and it was no longer possible to have a fair trial . The court did not accept this . In 2011 the government said that the three claimants should sue the Kenyan government because it became legally responsible after independence in 1963 . But the judge did not accept this either . 70,000 people were put in prison by the British in Kenya, and more than 5,000 of them are still alive . Many of them may sue the British government . The court decision may also make it possible for victims in other parts of the world to sue . The Foreign Office said it will appeal against the decision . The normal time limit for a civil action is three to six years, they said . In this case, that period has been extended to over 50 years, but the people who made the decisions are dead and they cant give their view of what happened . The victory for Paulo Muoka Nzili , 85, Wambugu Wa Nyingi , 84, and Jane Muthoni Mara , 73, was the result of a three-year battle in the courts . Their lawyers said they had suffered terrible brutality . In the Kenyan capital Nairobi, Nyingi and Mara heard the news by mobile phone . They reacted with joy when they heard, hugging, dancing and praying . Nyingi, who was put in prison and beaten, said: For me I just wanted everyone to know the truth . Even the children of my children should know what happened . What should happen is that people should be compensated so they can begin to forgive the British government . Mara said: Im very happy and my heart is clean . The judge said in 2011 that there was a lot of evidence to show that prisoners were perhaps tortured . He decided that a fair trial was possible, especially because thousands of secret documents from the colonial era were found in 2011 . The British governments lawyers accepted that all three of the old Kenyans were tortured . The claimants lawyer said: The British government has admitted that these three Kenyans were brutally tortured but they have tried not to take any legal responsibility . There will be victims of colonial torture from Malaya to the Yemen, from Cyprus to Palestine, who will be very interested in this case . People                                                                                   </td></tr>\n<tr><td>Intermediate   </td><td>Ever since he was diagnosed HIV positive, Moses King , 48, has had one major problem . He has been able to cope with the stigma of being HIV positive widespread in Liberia and he was able to access antiretroviral medication, provided by the Global Fund to Fight AIDS, Tuberculosis and Malaria and distributed by the Liberian government . But King and his family of six children could not get the right food to eat . A subsistence farmer, he grew vegetables and bought rice . But meat and fish expensive, luxury products in Liberian markets but essential sources of protein remained elusive . Subsistence farming allowed us to survive, but we had so many problems, said King . We could not get any protein, and we were not getting the nutrients we needed to sustain ourselves . Pate K Chon, a counsellor who works with HIV sufferers in Liberia, provided an unlikely solution . Since watching a documentary about a fish farm in Thailand several years earlier, she had thought of setting up a similar project in Liberia, enabling HIV sufferers to have work and also access a stable source of protein . I saw this film about fish in a cement pool and I thought it was a good idea, said Chon, herself diagnosed with HIV in 1992 . So many of the people I work with dont have the means to have a balanced protein diet and fish is such a clean source of protein it doesnt cause health problems like other sources, and it is something we can farm . Chon, founder of a faith-based NGO, began building a pool in which to farm fish . In June 2012, Chon met John Sheehy, a strategic philanthropist and founder of consultancy Emerging Business Lab, who raised money for the non-profit fish farm in the northeast of Monrovia, Liberias capital, and set about learning aquaculture, doing an online course through Cornell University and speaking to other fish farmers in Africa . I raised the money and built the farm, learned the proper tank layout and water flow system, said Sheehy . A lot of my knowledge was self-taught, and now I would love to be able to write a manual and share it with other people, he added . The project has now grown into the Grow2Feed Liberia Fish Farm, with 12 tanks, which, when fully stocked, will each have 5,000 fish providing up to 200,000 fish per year, serving a community of 1,200 predominantly HIV-positive people, including King and his family . In addition to the fish, waste from the tanks is collected and used to irrigate crops, also providing food and income for the community, made up of 503 women , 206 men and 346 children . The members                                                                                          </td></tr>\n<tr><td>Elementary     </td><td>The High Court in London has ruled that three elderly Kenyans detained and tortured during the Mau Mau rebellion have the right to sue . Now the British government is afraid that thousands of legal claims may follow, from people who were imprisoned and who say they were treated badly during the final days of the British Empire . The governments lawyers said that too much time had passed since the seven-year insurgency in the 1950s and it was no longer possible to hold a fair trial, but the court rejected these claims . In 2011 the same judge rejected the governments claim that the three claimants should sue the Kenyan government because it had inherited Britains legal responsibilities on independence in 1963 . Human rights activists in Kenya estimate more than 5,000 of the 70,000 people detained by the British colonial authorities are still alive . Many may bring claims against the British government . The ruling may also make it possible for victims of colonial atrocities in other parts of the world to sue . The Foreign Office said that the ruling had potentially significant legal implications, and said it was planning to appeal . The normal time limit for bringing a civil action is three to six years, a spokesman said . In this case, that period has been extended to over 50 years despite the fact that the key decision makers are dead and unable to give their view of what happened . The historic victory for Paulo Muoka Nzili , 85, Wambugu Wa Nyingi , 84, and Jane Muthoni Mara , 73, was the result of a three-year battle in the courts . Their lawyers said they had suffered unspeakable acts of brutality . In the Kenyan capital Nairobi, Nyingi and Mara, heard the news by mobile phone . They had been sitting silently with their supporters in a garden and reacted with joy when the word came, hugging, dancing and raising their hands to the sky to pray . Nyingi, who was detained for about nine years, beaten unconscious and still has the scars, said: For me I just wanted the truth to be out . Even the children of my children should know what happened . What should happen is that people should be compensated so they can begin to forgive the British government . Mara said: Im very happy and my heart is clean . When she was asked what she would tell her four children, she said simply: I will tell them I won . The judge said in 2011 that there was ample evidence that there may have been systematic torture of detainees . On Friday he ruled that a fair trial was possible, and highlighted the fact that thousands of secret files from the colonial era appeared in 2011 . The British governments lawyers tried to have the claims</td></tr>\n</tbody>\n</table><style>th,td {font-size: 10px}</style>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -158,16 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "['When', 'you', 'see', 'the', 'word', 'Amazon', ',', 'whats', 'the', 'first']\n",
-      "['WRB', 'PRP', 'VB', 'DT', 'NN', 'NN', ',', 'VBZ', 'DT', 'JJ']\n"
-     ]
+      "['When', 'you', 'see', 'the', 'word', 'Amazon', ',', 'whats', 'the', 'first']\n['WRB', 'PRP', 'VB', 'DT', 'NN', 'NN', ',', 'VBZ', 'DT', 'JJ']\n"
+     ],
+     "output_type": "stream"
     }
    ],
    "source": [
@@ -177,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -190,17 +187,21 @@
    "outputs": [
     {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
       "{'nn': 1, 'in': 2, 'dt': 3, 'jj': 4, 'nns': 5, 'nnp': 6, ',': 7, '.': 8, 'rb': 9, 'prp': 10, 'vb': 11, 'vbd': 12, 'cc': 13, 'vbz': 14, 'to': 15, 'vbp': 16, 'cd': 17, 'vbn': 18, 'vbg': 19, 'prp$': 20, 'md': 21, 'wdt': 22, 'wrb': 23, 'wp': 24, 'jjr': 25, 'rp': 26, ':': 27, 'jjs': 28, 'ex': 29, 'rbr': 30, 'nnps': 31, '-rrb-': 32, '-lrb-': 33, 'rbs': 34, 'pdt': 35, '$': 36, 'fw': 37, 'uh': 38, 'wp$': 39, 'sym': 40, \"''\": 41, 'ls': 42, 'pos': 43, '``': 44}\n"
-     ]
+     ],
+     "output_type": "stream"
     }
    ],
    "source": [
+    "import json\n",
     "maxlen = 1000 # Cuts off reviews after 1000 words\n",
     "max_words = 45\n",
     "tokenizer = Tokenizer(num_words=max_words)\n",
     "tokenizer.fit_on_texts(articles_pos)\n",
+    "\n",
+    "with open('tokenizer.json', 'w', encoding='utf-8') as f:\n",
+    "    f.write(json.dumps(tokenizer.to_json(), ensure_ascii=False))\n",
     "print(tokenizer.word_index)"
    ]
   },
@@ -2309,10 +2310,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
